tests/bad/enum_get_member_dot.ae
/// fail: Type Variable has no member named 'Float'

enum Variable {
    Integer
    IntLiteral
    Float
    String
}

def main() {
    let x = Variable::Integer
    let y = x.Float
}